# clean-experiments

./: .env.example  AGENTS.md  client.rest  compose.yaml  pyproject.toml
src/: __init__.py  container.py  root.py  settings.py
src/modules/account/config/: event_config.py
src/modules/account/controllers/: account_controllers.py
src/modules/account/domain/: events.py  test_user.py  user.py
src/modules/account/domain/value_objects/: age.py  email.py  name.py
src/modules/account/handlers/: user_handlers.py
src/modules/account/repository/: user_repository.py  user_repository_mongo.py
src/modules/account/use_case/: create_user_use_case.py  delete_user_use_case.py  get_user_use_case.py  update_user_use_case.py
src/modules/core/domain/: domain_event.py  entity.py  event_dispatcher.py
src/modules/core/infra/documents/: user_document.py
