[project]
name = "clean-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.0",
    "dotenv>=0.9.9",
    "lagom>=2.7.7",
    "litestar[pydantic,standard]>=2.17.0",
    "motor>=3.7.1",
]

[dependency-groups]
dev = ["mypy>=1.18.1", "pytest>=8.4.2", "ruff>=0.13.0", "taskipy>=1.14.1"]

[tool.taskipy.tasks]
dev = "litestar --app=src.root:create_app run --reload --debug"
format = "ruff format ."
lint = "ruff check ."
test = "PYTHONDONTWRITEBYTECODE=1 pytest"
typing = "mypy src"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["src"]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["D", "DOC"]

[tool.ruff.lint.pydocstyle]
convention = "google" # ou "numpy", "pep257"

[tool.mypy]
check_untyped_defs = true
